y.output
État 13 conflits: 2 décalage/réduction
État 19 conflits: 2 décalage/réduction
État 23 conflits: 1 décalage/réduction
État 26 conflits: 1 décalage/réduction
État 54 conflits: 1 décalage/réduction
État 63 conflits: 1 décalage/réduction
État 138 conflits: 1 décalage/réduction
État 157 conflits: 1 décalage/réduction


Grammaire

    0 $accept: Start $end

    1 Start: Fonctions Raz Main

    2 Fonctions: CreerTable Fonction Fonctions
    3          | %empty

    4 Raz: %empty

    5 CreerTable: %empty

    6 Fonction: tINT NommerFonction tOPAR ArgumentFonction tCPAR Block FinDeFonction

    7 FinDeFonction: %empty

    8 ArgumentFonction: tCONST tINT tVAR
    9                 | tINT tVAR
   10                 | %empty

   11 NommerFonction: tVAR

   12 Main: tMAIN Block

   13 Block: tOBRACKET Declarations Instructions tCBRACKET

   14 Declarations: Declaration Declarations
   15             | %empty

   16 Declaration: tCONST tINT tVAR tSEMICOLON
   17            | tINT tVAR tSEMICOLON
   18            | tCONST tINT AssignmentConst tSEMICOLON
   19            | tINT AssignmentInt tSEMICOLON

   20 AssignmentInt: tVAR tVIR AssignmentInt
   21              | tVAR tEQ tVAR tVIR AssignmentInt
   22              | tVAR tEQ tLESS tVAR tVIR AssignmentInt
   23              | tVAR tEQ tVAR
   24              | tVAR tEQ tLESS tVAR
   25              | tVAR tEQ tNUM tVIR AssignmentInt
   26              | tVAR tEQ tLESS tNUM tVIR AssignmentInt
   27              | tVAR tEQ tNUM
   28              | tVAR tEQ tLESS tNUM
   29              | tVAR tEQ tEXPO tVIR AssignmentInt
   30              | tVAR tEQ tLESS tEXPO tVIR AssignmentInt
   31              | tVAR tEQ tEXPO
   32              | tVAR tEQ tLESS tEXPO
   33              | tVAR

   34 AssignmentConst: tVAR tVIR AssignmentConst
   35                | tVAR tEQ tVAR tVIR AssignmentConst
   36                | tVAR tEQ tLESS tVAR tVIR AssignmentConst
   37                | tVAR tEQ tVAR
   38                | tVAR tEQ tLESS tVAR
   39                | tVAR tEQ tNUM tVIR AssignmentConst
   40                | tVAR tEQ tLESS tNUM tVIR AssignmentConst
   41                | tVAR tEQ tNUM
   42                | tVAR tEQ tLESS tNUM
   43                | tVAR tEQ tEXPO tVIR AssignmentConst
   44                | tVAR tEQ tLESS tEXPO tVIR AssignmentConst
   45                | tVAR tEQ tEXPO
   46                | tVAR tEQ tLESS tEXPO
   47                | tVAR

   48 Instructions: Instruction Instructions
   49             | %empty

   50 Instruction: Operation tSEMICOLON
   51            | Statement

   52 Operation: tOPAR Operation tCPAR
   53          | Operation tPLUS Operation
   54          | Operation tLESS Operation
   55          | Operation tMUL Operation
   56          | Operation tDIV Operation
   57          | tVAR tEQ Operation
   58          | tLESS Operation
   59          | tNUM
   60          | tVAR
   61          | tEXPO
   62          | AppelFonction

   63 Statement: While
   64          | BIfElse
   65          | Printf
   66          | Declaration
   67          | Return
   68          | tSEMICOLON

   69 Return: tRETURN Operation

   70 AppelFonction: tVAR tOPAR tCPAR
   71              | tVAR tOPAR Operation tCPAR

   72 While: tWHILE Nsautw tOPAR Condition tCPAR Instruction
   73      | tWHILE Nsautw tOPAR Condition tCPAR tOBRACKET Instructions tCBRACKET

   74 BIfElse: tIF tOPAR Condition tCPAR Instruction tELSE Nsaut Instruction
   75        | tIF tOPAR Condition tCPAR Instruction
   76        | tIF tOPAR Condition tCPAR tOBRACKET Instructions tCBRACKET tELSE Nsaut Instruction
   77        | tIF tOPAR Condition tCPAR tOBRACKET Instructions tCBRACKET
   78        | tIF tOPAR Condition tCPAR Instruction tELSE Nsaut tOBRACKET Instructions tCBRACKET
   79        | tIF tOPAR Condition tCPAR tOBRACKET Instructions tCBRACKET tELSE Nsaut tOBRACKET Instructions tCBRACKET

   80 Nsautw: %empty

   81 Nsaut: %empty

   82 Condition: Operation tEQUAL Operation
   83          | Operation tNE Operation
   84          | Operation tLE Operation
   85          | Operation tLT Operation
   86          | Operation tGE Operation
   87          | Operation tGT Operation
   88          | Operation

   89 Printf: tPRINTF tOPAR tVAR tCPAR tSEMICOLON


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tLE (258) 84
tLT (259) 85
tGE (260) 86
tGT (261) 87
tNE (262) 83
tEQUAL (263) 82
tVAR (264) 8 9 11 16 17 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
    35 36 37 38 39 40 41 42 43 44 45 46 47 57 60 70 71 89
tNUM (265) 25 26 27 28 39 40 41 42 59
tEXPO (266) 29 30 31 32 43 44 45 46 61
tOPAR (267) 6 52 70 71 72 73 74 75 76 77 78 79 89
tCPAR (268) 6 52 70 71 72 73 74 75 76 77 78 79 89
tVIR (269) 20 21 22 25 26 29 30 34 35 36 39 40 43 44
tSEMICOLON (270) 16 17 18 19 50 68 89
tEQ (271) 21 22 23 24 25 26 27 28 29 30 31 32 35 36 37 38 39 40 41
    42 43 44 45 46 57
tPLUS (272) 53
tLESS (273) 22 24 26 28 30 32 36 38 40 42 44 46 54 58
tMUL (274) 55
tDIV (275) 56
tWHILE (276) 72 73
tIF (277) 74 75 76 77 78 79
tELSE (278) 74 76 78 79
tPRINTF (279) 89
tOBRACKET (280) 13 73 76 77 78 79
tCBRACKET (281) 13 73 76 77 78 79
tINT (282) 6 8 9 16 17 18 19
tCONST (283) 8 16 18
tRETURN (284) 69
tMAIN (285) 12


Non-terminaux, suivis des règles où ils apparaissent

$accept (31)
    à gauche: 0
Start (32)
    à gauche: 1, à droite: 0
Fonctions (33)
    à gauche: 2 3, à droite: 1 2
Raz (34)
    à gauche: 4, à droite: 1
CreerTable (35)
    à gauche: 5, à droite: 2
Fonction (36)
    à gauche: 6, à droite: 2
FinDeFonction (37)
    à gauche: 7, à droite: 6
ArgumentFonction (38)
    à gauche: 8 9 10, à droite: 6
NommerFonction (39)
    à gauche: 11, à droite: 6
Main (40)
    à gauche: 12, à droite: 1
Block (41)
    à gauche: 13, à droite: 6 12
Declarations (42)
    à gauche: 14 15, à droite: 13 14
Declaration (43)
    à gauche: 16 17 18 19, à droite: 14 66
AssignmentInt (44)
    à gauche: 20 21 22 23 24 25 26 27 28 29 30 31 32 33, à droite:
    19 20 21 22 25 26 29 30
AssignmentConst (45)
    à gauche: 34 35 36 37 38 39 40 41 42 43 44 45 46 47, à droite:
    18 34 35 36 39 40 43 44
Instructions (46)
    à gauche: 48 49, à droite: 13 48 73 76 77 78 79
Instruction (47)
    à gauche: 50 51, à droite: 48 72 74 75 76 78
Operation (48)
    à gauche: 52 53 54 55 56 57 58 59 60 61 62, à droite: 50 52 53
    54 55 56 57 58 69 71 82 83 84 85 86 87 88
Statement (49)
    à gauche: 63 64 65 66 67 68, à droite: 51
Return (50)
    à gauche: 69, à droite: 67
AppelFonction (51)
    à gauche: 70 71, à droite: 62
While (52)
    à gauche: 72 73, à droite: 63
BIfElse (53)
    à gauche: 74 75 76 77 78 79, à droite: 64
Nsautw (54)
    à gauche: 80, à droite: 72 73
Nsaut (55)
    à gauche: 81, à droite: 74 76 78 79
Condition (56)
    à gauche: 82 83 84 85 86 87 88, à droite: 72 73 74 75 76 77 78
    79
Printf (57)
    à gauche: 89, à droite: 65


État 0

    0 $accept: . Start $end

    tINT      réduction par utilisation de la règle 5 (CreerTable)
    $défaut  réduction par utilisation de la règle 3 (Fonctions)

    Start       aller à l'état 1
    Fonctions   aller à l'état 2
    CreerTable  aller à l'état 3


État 1

    0 $accept: Start . $end

    $end  décalage et aller à l'état 4


État 2

    1 Start: Fonctions . Raz Main

    $défaut  réduction par utilisation de la règle 4 (Raz)

    Raz  aller à l'état 5


État 3

    2 Fonctions: CreerTable . Fonction Fonctions

    tINT  décalage et aller à l'état 6

    Fonction  aller à l'état 7


État 4

    0 $accept: Start $end .

    $défaut  accepter


État 5

    1 Start: Fonctions Raz . Main

    tMAIN  décalage et aller à l'état 8

    Main  aller à l'état 9


État 6

    6 Fonction: tINT . NommerFonction tOPAR ArgumentFonction tCPAR Block FinDeFonction

    tVAR  décalage et aller à l'état 10

    NommerFonction  aller à l'état 11


État 7

    2 Fonctions: CreerTable Fonction . Fonctions

    tINT      réduction par utilisation de la règle 5 (CreerTable)
    $défaut  réduction par utilisation de la règle 3 (Fonctions)

    Fonctions   aller à l'état 12
    CreerTable  aller à l'état 3


État 8

   12 Main: tMAIN . Block

    tOBRACKET  décalage et aller à l'état 13

    Block  aller à l'état 14


État 9

    1 Start: Fonctions Raz Main .

    $défaut  réduction par utilisation de la règle 1 (Start)


État 10

   11 NommerFonction: tVAR .

    $défaut  réduction par utilisation de la règle 11 (NommerFonction)


État 11

    6 Fonction: tINT NommerFonction . tOPAR ArgumentFonction tCPAR Block FinDeFonction

    tOPAR  décalage et aller à l'état 15


État 12

    2 Fonctions: CreerTable Fonction Fonctions .

    $défaut  réduction par utilisation de la règle 2 (Fonctions)


État 13

   13 Block: tOBRACKET . Declarations Instructions tCBRACKET

    tINT    décalage et aller à l'état 16
    tCONST  décalage et aller à l'état 17

    tINT      [réduction par utilisation de la règle 15 (Declarations)]
    tCONST    [réduction par utilisation de la règle 15 (Declarations)]
    $défaut  réduction par utilisation de la règle 15 (Declarations)

    Declarations  aller à l'état 18
    Declaration   aller à l'état 19


État 14

   12 Main: tMAIN Block .

    $défaut  réduction par utilisation de la règle 12 (Main)


État 15

    6 Fonction: tINT NommerFonction tOPAR . ArgumentFonction tCPAR Block FinDeFonction

    tINT    décalage et aller à l'état 20
    tCONST  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 10 (ArgumentFonction)

    ArgumentFonction  aller à l'état 22


État 16

   17 Declaration: tINT . tVAR tSEMICOLON
   19            | tINT . AssignmentInt tSEMICOLON

    tVAR  décalage et aller à l'état 23

    AssignmentInt  aller à l'état 24


État 17

   16 Declaration: tCONST . tINT tVAR tSEMICOLON
   18            | tCONST . tINT AssignmentConst tSEMICOLON

    tINT  décalage et aller à l'état 25


État 18

   13 Block: tOBRACKET Declarations . Instructions tCBRACKET

    tVAR        décalage et aller à l'état 26
    tNUM        décalage et aller à l'état 27
    tEXPO       décalage et aller à l'état 28
    tOPAR       décalage et aller à l'état 29
    tSEMICOLON  décalage et aller à l'état 30
    tLESS       décalage et aller à l'état 31
    tWHILE      décalage et aller à l'état 32
    tIF         décalage et aller à l'état 33
    tPRINTF     décalage et aller à l'état 34
    tINT        décalage et aller à l'état 16
    tCONST      décalage et aller à l'état 17
    tRETURN     décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 49 (Instructions)

    Declaration    aller à l'état 36
    Instructions   aller à l'état 37
    Instruction    aller à l'état 38
    Operation      aller à l'état 39
    Statement      aller à l'état 40
    Return         aller à l'état 41
    AppelFonction  aller à l'état 42
    While          aller à l'état 43
    BIfElse        aller à l'état 44
    Printf         aller à l'état 45


État 19

   14 Declarations: Declaration . Declarations

    tINT    décalage et aller à l'état 16
    tCONST  décalage et aller à l'état 17

    tINT      [réduction par utilisation de la règle 15 (Declarations)]
    tCONST    [réduction par utilisation de la règle 15 (Declarations)]
    $défaut  réduction par utilisation de la règle 15 (Declarations)

    Declarations  aller à l'état 46
    Declaration   aller à l'état 19


État 20

    9 ArgumentFonction: tINT . tVAR

    tVAR  décalage et aller à l'état 47


État 21

    8 ArgumentFonction: tCONST . tINT tVAR

    tINT  décalage et aller à l'état 48


État 22

    6 Fonction: tINT NommerFonction tOPAR ArgumentFonction . tCPAR Block FinDeFonction

    tCPAR  décalage et aller à l'état 49


État 23

   17 Declaration: tINT tVAR . tSEMICOLON
   20 AssignmentInt: tVAR . tVIR AssignmentInt
   21              | tVAR . tEQ tVAR tVIR AssignmentInt
   22              | tVAR . tEQ tLESS tVAR tVIR AssignmentInt
   23              | tVAR . tEQ tVAR
   24              | tVAR . tEQ tLESS tVAR
   25              | tVAR . tEQ tNUM tVIR AssignmentInt
   26              | tVAR . tEQ tLESS tNUM tVIR AssignmentInt
   27              | tVAR . tEQ tNUM
   28              | tVAR . tEQ tLESS tNUM
   29              | tVAR . tEQ tEXPO tVIR AssignmentInt
   30              | tVAR . tEQ tLESS tEXPO tVIR AssignmentInt
   31              | tVAR . tEQ tEXPO
   32              | tVAR . tEQ tLESS tEXPO
   33              | tVAR .

    tVIR        décalage et aller à l'état 50
    tSEMICOLON  décalage et aller à l'état 51
    tEQ         décalage et aller à l'état 52

    tSEMICOLON  [réduction par utilisation de la règle 33 (AssignmentInt)]


État 24

   19 Declaration: tINT AssignmentInt . tSEMICOLON

    tSEMICOLON  décalage et aller à l'état 53


État 25

   16 Declaration: tCONST tINT . tVAR tSEMICOLON
   18            | tCONST tINT . AssignmentConst tSEMICOLON

    tVAR  décalage et aller à l'état 54

    AssignmentConst  aller à l'état 55


État 26

   57 Operation: tVAR . tEQ Operation
   60          | tVAR .
   70 AppelFonction: tVAR . tOPAR tCPAR
   71              | tVAR . tOPAR Operation tCPAR

    tOPAR  décalage et aller à l'état 56
    tEQ    décalage et aller à l'état 57

    tOPAR     [réduction par utilisation de la règle 60 (Operation)]
    $défaut  réduction par utilisation de la règle 60 (Operation)


État 27

   59 Operation: tNUM .

    $défaut  réduction par utilisation de la règle 59 (Operation)


État 28

   61 Operation: tEXPO .

    $défaut  réduction par utilisation de la règle 61 (Operation)


État 29

   52 Operation: tOPAR . Operation tCPAR

    tVAR   décalage et aller à l'état 26
    tNUM   décalage et aller à l'état 27
    tEXPO  décalage et aller à l'état 28
    tOPAR  décalage et aller à l'état 29
    tLESS  décalage et aller à l'état 31

    Operation      aller à l'état 58
    AppelFonction  aller à l'état 42


État 30

   68 Statement: tSEMICOLON .

    $défaut  réduction par utilisation de la règle 68 (Statement)


État 31

   58 Operation: tLESS . Operation

    tVAR   décalage et aller à l'état 26
    tNUM   décalage et aller à l'état 27
    tEXPO  décalage et aller à l'état 28
    tOPAR  décalage et aller à l'état 29
    tLESS  décalage et aller à l'état 31

    Operation      aller à l'état 59
    AppelFonction  aller à l'état 42


État 32

   72 While: tWHILE . Nsautw tOPAR Condition tCPAR Instruction
   73      | tWHILE . Nsautw tOPAR Condition tCPAR tOBRACKET Instructions tCBRACKET

    $défaut  réduction par utilisation de la règle 80 (Nsautw)

    Nsautw  aller à l'état 60


État 33

   74 BIfElse: tIF . tOPAR Condition tCPAR Instruction tELSE Nsaut Instruction
   75        | tIF . tOPAR Condition tCPAR Instruction
   76        | tIF . tOPAR Condition tCPAR tOBRACKET Instructions tCBRACKET tELSE Nsaut Instruction
   77        | tIF . tOPAR Condition tCPAR tOBRACKET Instructions tCBRACKET
   78        | tIF . tOPAR Condition tCPAR Instruction tELSE Nsaut tOBRACKET Instructions tCBRACKET
   79        | tIF . tOPAR Condition tCPAR tOBRACKET Instructions tCBRACKET tELSE Nsaut tOBRACKET Instructions tCBRACKET

    tOPAR  décalage et aller à l'état 61


État 34

   89 Printf: tPRINTF . tOPAR tVAR tCPAR tSEMICOLON

    tOPAR  décalage et aller à l'état 62


État 35

   69 Return: tRETURN . Operation

    tVAR   décalage et aller à l'état 26
    tNUM   décalage et aller à l'état 27
    tEXPO  décalage et aller à l'état 28
    tOPAR  décalage et aller à l'état 29
    tLESS  décalage et aller à l'état 31

    Operation      aller à l'état 63
    AppelFonction  aller à l'état 42


État 36

   66 Statement: Declaration .

    $défaut  réduction par utilisation de la règle 66 (Statement)


État 37

   13 Block: tOBRACKET Declarations Instructions . tCBRACKET

    tCBRACKET  décalage et aller à l'état 64


État 38

   48 Instructions: Instruction . Instructions

    tVAR        décalage et aller à l'état 26
    tNUM        décalage et aller à l'état 27
    tEXPO       décalage et aller à l'état 28
    tOPAR       décalage et aller à l'état 29
    tSEMICOLON  décalage et aller à l'état 30
    tLESS       décalage et aller à l'état 31
    tWHILE      décalage et aller à l'état 32
    tIF         décalage et aller à l'état 33
    tPRINTF     décalage et aller à l'état 34
    tINT        décalage et aller à l'état 16
    tCONST      décalage et aller à l'état 17
    tRETURN     décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 49 (Instructions)

    Declaration    aller à l'état 36
    Instructions   aller à l'état 65
    Instruction    aller à l'état 38
    Operation      aller à l'état 39
    Statement      aller à l'état 40
    Return         aller à l'état 41
    AppelFonction  aller à l'état 42
    While          aller à l'état 43
    BIfElse        aller à l'état 44
    Printf         aller à l'état 45


État 39

   50 Instruction: Operation . tSEMICOLON
   53 Operation: Operation . tPLUS Operation
   54          | Operation . tLESS Operation
   55          | Operation . tMUL Operation
   56          | Operation . tDIV Operation

    tSEMICOLON  décalage et aller à l'état 66
    tPLUS       décalage et aller à l'état 67
    tLESS       décalage et aller à l'état 68
    tMUL        décalage et aller à l'état 69
    tDIV        décalage et aller à l'état 70


État 40

   51 Instruction: Statement .

    $défaut  réduction par utilisation de la règle 51 (Instruction)


État 41

   67 Statement: Return .

    $défaut  réduction par utilisation de la règle 67 (Statement)


État 42

   62 Operation: AppelFonction .

    $défaut  réduction par utilisation de la règle 62 (Operation)


État 43

   63 Statement: While .

    $défaut  réduction par utilisation de la règle 63 (Statement)


État 44

   64 Statement: BIfElse .

    $défaut  réduction par utilisation de la règle 64 (Statement)


État 45

   65 Statement: Printf .

    $défaut  réduction par utilisation de la règle 65 (Statement)


État 46

   14 Declarations: Declaration Declarations .

    $défaut  réduction par utilisation de la règle 14 (Declarations)


État 47

    9 ArgumentFonction: tINT tVAR .

    $défaut  réduction par utilisation de la règle 9 (ArgumentFonction)


État 48

    8 ArgumentFonction: tCONST tINT . tVAR

    tVAR  décalage et aller à l'état 71


État 49

    6 Fonction: tINT NommerFonction tOPAR ArgumentFonction tCPAR . Block FinDeFonction

    tOBRACKET  décalage et aller à l'état 13

    Block  aller à l'état 72


État 50

   20 AssignmentInt: tVAR tVIR . AssignmentInt

    tVAR  décalage et aller à l'état 73

    AssignmentInt  aller à l'état 74


État 51

   17 Declaration: tINT tVAR tSEMICOLON .

    $défaut  réduction par utilisation de la règle 17 (Declaration)


État 52

   21 AssignmentInt: tVAR tEQ . tVAR tVIR AssignmentInt
   22              | tVAR tEQ . tLESS tVAR tVIR AssignmentInt
   23              | tVAR tEQ . tVAR
   24              | tVAR tEQ . tLESS tVAR
   25              | tVAR tEQ . tNUM tVIR AssignmentInt
   26              | tVAR tEQ . tLESS tNUM tVIR AssignmentInt
   27              | tVAR tEQ . tNUM
   28              | tVAR tEQ . tLESS tNUM
   29              | tVAR tEQ . tEXPO tVIR AssignmentInt
   30              | tVAR tEQ . tLESS tEXPO tVIR AssignmentInt
   31              | tVAR tEQ . tEXPO
   32              | tVAR tEQ . tLESS tEXPO

    tVAR   décalage et aller à l'état 75
    tNUM   décalage et aller à l'état 76
    tEXPO  décalage et aller à l'état 77
    tLESS  décalage et aller à l'état 78


État 53

   19 Declaration: tINT AssignmentInt tSEMICOLON .

    $défaut  réduction par utilisation de la règle 19 (Declaration)


État 54

   16 Declaration: tCONST tINT tVAR . tSEMICOLON
   34 AssignmentConst: tVAR . tVIR AssignmentConst
   35                | tVAR . tEQ tVAR tVIR AssignmentConst
   36                | tVAR . tEQ tLESS tVAR tVIR AssignmentConst
   37                | tVAR . tEQ tVAR
   38                | tVAR . tEQ tLESS tVAR
   39                | tVAR . tEQ tNUM tVIR AssignmentConst
   40                | tVAR . tEQ tLESS tNUM tVIR AssignmentConst
   41                | tVAR . tEQ tNUM
   42                | tVAR . tEQ tLESS tNUM
   43                | tVAR . tEQ tEXPO tVIR AssignmentConst
   44                | tVAR . tEQ tLESS tEXPO tVIR AssignmentConst
   45                | tVAR . tEQ tEXPO
   46                | tVAR . tEQ tLESS tEXPO
   47                | tVAR .

    tVIR        décalage et aller à l'état 79
    tSEMICOLON  décalage et aller à l'état 80
    tEQ         décalage et aller à l'état 81

    tSEMICOLON  [réduction par utilisation de la règle 47 (AssignmentConst)]


État 55

   18 Declaration: tCONST tINT AssignmentConst . tSEMICOLON

    tSEMICOLON  décalage et aller à l'état 82


État 56

   70 AppelFonction: tVAR tOPAR . tCPAR
   71              | tVAR tOPAR . Operation tCPAR

    tVAR   décalage et aller à l'état 26
    tNUM   décalage et aller à l'état 27
    tEXPO  décalage et aller à l'état 28
    tOPAR  décalage et aller à l'état 29
    tCPAR  décalage et aller à l'état 83
    tLESS  décalage et aller à l'état 31

    Operation      aller à l'état 84
    AppelFonction  aller à l'état 42


État 57

   57 Operation: tVAR tEQ . Operation

    tVAR   décalage et aller à l'état 26
    tNUM   décalage et aller à l'état 27
    tEXPO  décalage et aller à l'état 28
    tOPAR  décalage et aller à l'état 29
    tLESS  décalage et aller à l'état 31

    Operation      aller à l'état 85
    AppelFonction  aller à l'état 42


État 58

   52 Operation: tOPAR Operation . tCPAR
   53          | Operation . tPLUS Operation
   54          | Operation . tLESS Operation
   55          | Operation . tMUL Operation
   56          | Operation . tDIV Operation

    tCPAR  décalage et aller à l'état 86
    tPLUS  décalage et aller à l'état 67
    tLESS  décalage et aller à l'état 68
    tMUL   décalage et aller à l'état 69
    tDIV   décalage et aller à l'état 70


État 59

   53 Operation: Operation . tPLUS Operation
   54          | Operation . tLESS Operation
   55          | Operation . tMUL Operation
   56          | Operation . tDIV Operation
   58          | tLESS Operation .

    tMUL  décalage et aller à l'état 69
    tDIV  décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 58 (Operation)


État 60

   72 While: tWHILE Nsautw . tOPAR Condition tCPAR Instruction
   73      | tWHILE Nsautw . tOPAR Condition tCPAR tOBRACKET Instructions tCBRACKET

    tOPAR  décalage et aller à l'état 87


État 61

   74 BIfElse: tIF tOPAR . Condition tCPAR Instruction tELSE Nsaut Instruction
   75        | tIF tOPAR . Condition tCPAR Instruction
   76        | tIF tOPAR . Condition tCPAR tOBRACKET Instructions tCBRACKET tELSE Nsaut Instruction
   77        | tIF tOPAR . Condition tCPAR tOBRACKET Instructions tCBRACKET
   78        | tIF tOPAR . Condition tCPAR Instruction tELSE Nsaut tOBRACKET Instructions tCBRACKET
   79        | tIF tOPAR . Condition tCPAR tOBRACKET Instructions tCBRACKET tELSE Nsaut tOBRACKET Instructions tCBRACKET

    tVAR   décalage et aller à l'état 26
    tNUM   décalage et aller à l'état 27
    tEXPO  décalage et aller à l'état 28
    tOPAR  décalage et aller à l'état 29
    tLESS  décalage et aller à l'état 31

    Operation      aller à l'état 88
    AppelFonction  aller à l'état 42
    Condition      aller à l'état 89


État 62

   89 Printf: tPRINTF tOPAR . tVAR tCPAR tSEMICOLON

    tVAR  décalage et aller à l'état 90


État 63

   53 Operation: Operation . tPLUS Operation
   54          | Operation . tLESS Operation
   55          | Operation . tMUL Operation
   56          | Operation . tDIV Operation
   69 Return: tRETURN Operation .

    tPLUS  décalage et aller à l'état 67
    tLESS  décalage et aller à l'état 68
    tMUL   décalage et aller à l'état 69
    tDIV   décalage et aller à l'état 70

    tLESS     [réduction par utilisation de la règle 69 (Return)]
    $défaut  réduction par utilisation de la règle 69 (Return)


État 64

   13 Block: tOBRACKET Declarations Instructions tCBRACKET .

    $défaut  réduction par utilisation de la règle 13 (Block)


État 65

   48 Instructions: Instruction Instructions .

    $défaut  réduction par utilisation de la règle 48 (Instructions)


État 66

   50 Instruction: Operation tSEMICOLON .

    $défaut  réduction par utilisation de la règle 50 (Instruction)


État 67

   53 Operation: Operation tPLUS . Operation

    tVAR   décalage et aller à l'état 26
    tNUM   décalage et aller à l'état 27
    tEXPO  décalage et aller à l'état 28
    tOPAR  décalage et aller à l'état 29
    tLESS  décalage et aller à l'état 31

    Operation      aller à l'état 91
    AppelFonction  aller à l'état 42


État 68

   54 Operation: Operation tLESS . Operation

    tVAR   décalage et aller à l'état 26
    tNUM   décalage et aller à l'état 27
    tEXPO  décalage et aller à l'état 28
    tOPAR  décalage et aller à l'état 29
    tLESS  décalage et aller à l'état 31

    Operation      aller à l'état 92
    AppelFonction  aller à l'état 42


État 69

   55 Operation: Operation tMUL . Operation

    tVAR   décalage et aller à l'état 26
    tNUM   décalage et aller à l'état 27
    tEXPO  décalage et aller à l'état 28
    tOPAR  décalage et aller à l'état 29
    tLESS  décalage et aller à l'état 31

    Operation      aller à l'état 93
    AppelFonction  aller à l'état 42


État 70

   56 Operation: Operation tDIV . Operation

    tVAR   décalage et aller à l'état 26
    tNUM   décalage et aller à l'état 27
    tEXPO  décalage et aller à l'état 28
    tOPAR  décalage et aller à l'état 29
    tLESS  décalage et aller à l'état 31

    Operation      aller à l'état 94
    AppelFonction  aller à l'état 42


État 71

    8 ArgumentFonction: tCONST tINT tVAR .

    $défaut  réduction par utilisation de la règle 8 (ArgumentFonction)


État 72

    6 Fonction: tINT NommerFonction tOPAR ArgumentFonction tCPAR Block . FinDeFonction

    $défaut  réduction par utilisation de la règle 7 (FinDeFonction)

    FinDeFonction  aller à l'état 95


État 73

   20 AssignmentInt: tVAR . tVIR AssignmentInt
   21              | tVAR . tEQ tVAR tVIR AssignmentInt
   22              | tVAR . tEQ tLESS tVAR tVIR AssignmentInt
   23              | tVAR . tEQ tVAR
   24              | tVAR . tEQ tLESS tVAR
   25              | tVAR . tEQ tNUM tVIR AssignmentInt
   26              | tVAR . tEQ tLESS tNUM tVIR AssignmentInt
   27              | tVAR . tEQ tNUM
   28              | tVAR . tEQ tLESS tNUM
   29              | tVAR . tEQ tEXPO tVIR AssignmentInt
   30              | tVAR . tEQ tLESS tEXPO tVIR AssignmentInt
   31              | tVAR . tEQ tEXPO
   32              | tVAR . tEQ tLESS tEXPO
   33              | tVAR .

    tVIR  décalage et aller à l'état 50
    tEQ   décalage et aller à l'état 52

    $défaut  réduction par utilisation de la règle 33 (AssignmentInt)


État 74

   20 AssignmentInt: tVAR tVIR AssignmentInt .

    $défaut  réduction par utilisation de la règle 20 (AssignmentInt)


État 75

   21 AssignmentInt: tVAR tEQ tVAR . tVIR AssignmentInt
   23              | tVAR tEQ tVAR .

    tVIR  décalage et aller à l'état 96

    $défaut  réduction par utilisation de la règle 23 (AssignmentInt)


État 76

   25 AssignmentInt: tVAR tEQ tNUM . tVIR AssignmentInt
   27              | tVAR tEQ tNUM .

    tVIR  décalage et aller à l'état 97

    $défaut  réduction par utilisation de la règle 27 (AssignmentInt)


État 77

   29 AssignmentInt: tVAR tEQ tEXPO . tVIR AssignmentInt
   31              | tVAR tEQ tEXPO .

    tVIR  décalage et aller à l'état 98

    $défaut  réduction par utilisation de la règle 31 (AssignmentInt)


État 78

   22 AssignmentInt: tVAR tEQ tLESS . tVAR tVIR AssignmentInt
   24              | tVAR tEQ tLESS . tVAR
   26              | tVAR tEQ tLESS . tNUM tVIR AssignmentInt
   28              | tVAR tEQ tLESS . tNUM
   30              | tVAR tEQ tLESS . tEXPO tVIR AssignmentInt
   32              | tVAR tEQ tLESS . tEXPO

    tVAR   décalage et aller à l'état 99
    tNUM   décalage et aller à l'état 100
    tEXPO  décalage et aller à l'état 101


État 79

   34 AssignmentConst: tVAR tVIR . AssignmentConst

    tVAR  décalage et aller à l'état 102

    AssignmentConst  aller à l'état 103


État 80

   16 Declaration: tCONST tINT tVAR tSEMICOLON .

    $défaut  réduction par utilisation de la règle 16 (Declaration)


État 81

   35 AssignmentConst: tVAR tEQ . tVAR tVIR AssignmentConst
   36                | tVAR tEQ . tLESS tVAR tVIR AssignmentConst
   37                | tVAR tEQ . tVAR
   38                | tVAR tEQ . tLESS tVAR
   39                | tVAR tEQ . tNUM tVIR AssignmentConst
   40                | tVAR tEQ . tLESS tNUM tVIR AssignmentConst
   41                | tVAR tEQ . tNUM
   42                | tVAR tEQ . tLESS tNUM
   43                | tVAR tEQ . tEXPO tVIR AssignmentConst
   44                | tVAR tEQ . tLESS tEXPO tVIR AssignmentConst
   45                | tVAR tEQ . tEXPO
   46                | tVAR tEQ . tLESS tEXPO

    tVAR   décalage et aller à l'état 104
    tNUM   décalage et aller à l'état 105
    tEXPO  décalage et aller à l'état 106
    tLESS  décalage et aller à l'état 107


État 82

   18 Declaration: tCONST tINT AssignmentConst tSEMICOLON .

    $défaut  réduction par utilisation de la règle 18 (Declaration)


État 83

   70 AppelFonction: tVAR tOPAR tCPAR .

    $défaut  réduction par utilisation de la règle 70 (AppelFonction)


État 84

   53 Operation: Operation . tPLUS Operation
   54          | Operation . tLESS Operation
   55          | Operation . tMUL Operation
   56          | Operation . tDIV Operation
   71 AppelFonction: tVAR tOPAR Operation . tCPAR

    tCPAR  décalage et aller à l'état 108
    tPLUS  décalage et aller à l'état 67
    tLESS  décalage et aller à l'état 68
    tMUL   décalage et aller à l'état 69
    tDIV   décalage et aller à l'état 70


État 85

   53 Operation: Operation . tPLUS Operation
   54          | Operation . tLESS Operation
   55          | Operation . tMUL Operation
   56          | Operation . tDIV Operation
   57          | tVAR tEQ Operation .

    tPLUS  décalage et aller à l'état 67
    tLESS  décalage et aller à l'état 68
    tMUL   décalage et aller à l'état 69
    tDIV   décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 57 (Operation)


État 86

   52 Operation: tOPAR Operation tCPAR .

    $défaut  réduction par utilisation de la règle 52 (Operation)


État 87

   72 While: tWHILE Nsautw tOPAR . Condition tCPAR Instruction
   73      | tWHILE Nsautw tOPAR . Condition tCPAR tOBRACKET Instructions tCBRACKET

    tVAR   décalage et aller à l'état 26
    tNUM   décalage et aller à l'état 27
    tEXPO  décalage et aller à l'état 28
    tOPAR  décalage et aller à l'état 29
    tLESS  décalage et aller à l'état 31

    Operation      aller à l'état 88
    AppelFonction  aller à l'état 42
    Condition      aller à l'état 109


État 88
